# Arbor

./: CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  arbor-tree-demo.html  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml
arbor-zoo/: README.md
arbor-zoo/_template/: PROVENANCE.md  README.md  eval.py  eval.sh  requirements.txt  solution.py  task.py
arbor-zoo/algotune_knn/: PROVENANCE.md  README.md  eval.py  eval.sh  solution.py  task.py
docs/: cli.md  cli.zh.md  configuration.md  configuration.zh.md  contributing.zh.md  how-it-works.zh.md  index.md  index.zh.md  installation.md  installation.zh.md  interaction-modes.zh.md  outputs-and-resume.md  outputs-and-resume.zh.md  plugins.md  plugins.zh.md  preparing-a-benchmark.md  preparing-a-benchmark.zh.md  quickstart.zh.md  roadmap.md  roadmap.zh.md  search.md  search.zh.md  self-evolution.md  skills.md  skills.zh.md  web-ui.zh.md  zoo-overview.md  zoo-overview.zh.md  zoo.md  zoo.zh.md
docs/dev/: benchmark-add.md  benchmark-backlog.md  quicker-start.md  trajectory-export.md
examples/: research_config.example.yaml
examples/algotune_knn/: research_config.yaml
project_page/src/: App.jsx  i18n.jsx
project_page/src/components/: IdeaTree.jsx  Intro.jsx
project_page/src/sections/: CaseStudy.jsx  Footer.jsx  Header.jsx  Hero.jsx  Method.jsx  Problem.jsx  ProofStrip.jsx  Resources.jsx  Results.jsx  WhyItMatters.jsx
project_page/src/styles/: theme.css
scripts/: generate_demo_recording.py
skills/: README.md
skills/arbor-agent-coordinator/: SKILL.md
skills/arbor-agent-executor/: SKILL.md
skills/arbor-agent-ideate/: SKILL.md
skills/arbor-agent-merge-eval/: SKILL.md
skills/arbor-agent-orchestrator/: SKILL.md
skills/arbor-agent-orchestrator/references/: source-map.md
skills/arbor-agent-resume-report/: SKILL.md
skills/arbor-agent-setup-intake/: SKILL.md
skills/arbor-agent-tools/: SKILL.md
skills/arbor-agent-tools/scripts/: arbor_state.py
skills/arbor-research-agent/: SKILL.md
src/: dashboard.py  distill.py  experience.py  export.py  recall.py  review.py  trajectory.py
src/cli/: _constants.py  app.py  chart.py  preflight.py  quickstart.py  replay.py  run_dashboard.py  run_state.py  tree_export.py
src/cli/assets/: tree_template.html
src/cli/assets/demo_session/: events.jsonl  tree.json
src/cli/commands/: benchmark_cmd.py  export_cmd.py  idea_check_cmd.py  install_cmd.py  login_cmd.py  replay_cmd.py  run.py  setup_cmd.py  web_cmd.py
src/cli/intake/: conversation_store.py  launch_tool.py  repl.py  scope.py  system_prompt.py
src/coordinator/: config.py  convergence.py  idea_tree.py  orchestrator.py  prompts.py
src/coordinator/tools/: __init__.py  _agent_recover.py  executor_io.py  executor_run.py  integrity.py  record_finding.py  research_ctx.py  search_ctx.py  tree_ops.py  worktree.py
src/core/: __init__.py  agent.py  config.py  config_cli.py  config_resolve.py  config_schema.py  context.py  skill_registry.py
src/core/llm/: base.py  claude.py  claude_oauth.py  openai_compat.py  openai_oauth.py  openai_responses.py
src/core/oauth/: __init__.py  anthropic.py  openai.py
src/core/tools/: base.py  file_read.py  glob_tool.py  grep.py
src/core/tools/web/: __init__.py  alphaxiv.py  backends.py  factory.py  keyless_visit.py  search.py
src/events/: types.py
src/events/subscribers/: cli_logger.py
src/mcp/: server.py  session_ops.py  session_timing.py
src/search_agent/: agent.py  prompts.py
src/webui/: index.html  launcher.py  server.py  session_source.py  snapshot.py
src/zoo/: __init__.py  acquire.py  agent_stages.py  ask_tool.py  cache.py  collect.py  pack.py  scaffold.py  verify.py
tests/: conftest.py  test_alphaxiv_backend.py  test_anthropic_oauth.py  test_auto_search.py  test_benchmark_cli.py  test_checkpoint.py  test_claude_thinking.py  test_contamination_surface.py  test_eval_events.py  test_executor_resume.py  test_executor_resume_integration.py  test_export.py  test_grounded_ideation.py  test_idea_check_cmd.py  test_idea_tree.py  test_intake_conversation_store.py  test_intake_repl_autosave.py  test_intake_safety.py  test_integrity.py  test_keyless_visit.py  test_mcp_server.py  test_mcp_session_ops.py  test_openai_oauth.py  test_plugin_eval_contract.py  test_prepare_benchmark_skill.py  test_quickstart.py  test_recall_safety.py  test_replay.py  test_resume_helpers.py  test_run_config_resolution.py  test_search_backends.py  test_search_config.py  test_tree_export.py  test_webui_index.py  test_webui_session.py  test_worktree.py  test_zoo_algotune_knn.py  test_zoo_ask_tool.py  test_zoo_bringup.py  test_zoo_collect.py  (+4 more)
